add /database/deleteAndInitNewData endopint
