# code/systems-api/handlers/systems.handlers.go
@@ -24,6 +24,7 @@ type ISystemsHandlers interface {
 	DeleteConfigurationByKeyAndSystemCode() echo.HandlerFunc
 	GetSystemConfigurationBySystemCode() echo.HandlerFunc
 	GetSystemTimeValueLogs() echo.HandlerFunc
+	RecreateDatabaseData() echo.HandlerFunc
 }
 
 // NewCommentsHandlers Comments handlers constructor
@@ -141,260 +142,14 @@ func (h *SystemsHandlers) GetSystemTimeValueLogs() echo.HandlerFunc {
 	}
 }
 
-// // CreateNewSystem godoc
-// // @Summary Create new system
-// // @Description Create new system and return new System ID
-// // @Tags Systems
-// // @Accept json
-// // @Produce json
-// // @Success 200
-// // @Router /system [post]
-// // @Security ApiKeyAuth
-// func (h *SystemsHandlers) CreateNewSystem() echo.HandlerFunc {
-// 	return func(c echo.Context) error {
-// 		name := c.FormValue("name")
-// 		description := c.FormValue("description")
-// 		systemCode := c.FormValue("systemCode")
-// 		systemAlias := c.FormValue("systemAlias")
-// 		facilityZone := c.FormValue("facilityZone")
-// 		location := c.FormValue("location")
-// 		ownerPerson := c.FormValue("ownerPerson")
-// 		responsiblePerson := c.FormValue("responsiblePerson")
-// 		maintainedByPerson := c.FormValue("maintainedByPerson")
+func (h *SystemsHandlers) RecreateDatabaseData() echo.HandlerFunc {
+	return func(c echo.Context) error {
 
-// 		system := models.System{
-// 			Name:               &name,
-// 			Description:        &description,
-// 			SystemCode:         &systemCode,
-// 			SystemAlias:        &systemAlias,
-// 			FacilityZone:       &facilityZone,
-// 			Location:           &location,
-// 			OwnerPerson:        &ownerPerson,
-// 			ResponsiblePerson:  &responsiblePerson,
-// 			MaintainedByPerson: &maintainedByPerson,
-// 		}
-
-// 		newSystemID, err := h.systemsService.CreateNewSystem(system)
-
-// 		if err != nil {
-// 			return c.JSON(http.StatusInternalServerError, "Unexpected server error: "+err.Error())
-// 		}
-
-// 		return c.JSON(http.StatusOK, echo.Map{"id": newSystemID})
-// 	}
-// }
-
-// func (h *SystemsHandlers) UpdateSystem() echo.HandlerFunc {
-// 	return func(c echo.Context) error {
-// 		formParams, _ := c.FormParams()
-// 		system := models.System{}
-// 		name := c.FormValue("name")
-// 		description := c.FormValue("description")
-// 		systemCode := c.FormValue("systemCode")
-// 		systemAlias := c.FormValue("systemAlias")
-// 		facilityZone := c.FormValue("facilityZone")
-// 		location := c.FormValue("location")
-// 		ownerPerson := c.FormValue("ownerPerson")
-// 		responsiblePerson := c.FormValue("responsiblePerson")
-// 		maintainedByPerson := c.FormValue("maintainedByPerson")
-
-// 		if formParams.Has("name") {
-// 			system.Name = &name
-// 		}
-// 		if formParams.Has("description") {
-// 			system.Description = &description
-// 		}
-// 		if formParams.Has("systemCode") {
-// 			system.SystemCode = &systemCode
-// 		}
-// 		if formParams.Has("systemAlias") {
-// 			system.SystemAlias = &systemAlias
-// 		}
-// 		if formParams.Has("facilityZone") {
-// 			system.FacilityZone = &facilityZone
-// 		}
-// 		if formParams.Has("location") {
-// 			system.Location = &location
-// 		}
-// 		if formParams.Has("ownerPerson") {
-// 			system.OwnerPerson = &ownerPerson
-// 		}
-// 		if formParams.Has("responsiblePerson") {
-// 			system.ResponsiblePerson = &responsiblePerson
-// 		}
-// 		if formParams.Has("maintainedByPerson") {
-// 			system.MaintainedByPerson = &maintainedByPerson
-// 		}
-
-// 		if formParams.Has("id") {
-// 			if vid, err := strconv.ParseInt(c.FormValue("id"), 10, 64); err == nil {
-// 				system.Id = vid
-// 			}
-// 		}
-
-// 		msg, err := h.systemsService.UpdateSystem(system)
-
-// 		if err != nil {
-// 			return c.JSON(http.StatusInternalServerError, "Unexpected server error: "+err.Error())
-// 		}
-
-// 		return c.JSON(http.StatusOK, echo.Map{"Result": msg})
-// 	}
-// }
-
-// // CreateNewSubSystem godoc
-// // @Summary Create new subsystem
-// // @Description Create new subsystem as child of and existing System. You can pass existing System id, uid or name(be careful because the name could not be unique)
-// // @Tags Systems
-// // @Accept json
-// // @Produce json
-// // @Success 200
-// // @Router /system/subsystem [post]
-// // @Security ApiKeyAuth
-// func (h *SystemsHandlers) CreateNewSubsystem() echo.HandlerFunc {
-// 	return func(c echo.Context) error {
-// 		name := c.FormValue("name")
-// 		description := c.FormValue("description")
-// 		systemCode := c.FormValue("systemCode")
-// 		systemAlias := c.FormValue("systemAlias")
-// 		facilityZone := c.FormValue("facilityZone")
-// 		location := c.FormValue("location")
-// 		ownerPerson := c.FormValue("ownerPerson")
-// 		responsiblePerson := c.FormValue("responsiblePerson")
-// 		maintainedByPerson := c.FormValue("maintainedByPerson")
-
-// 		system := models.System{
-// 			Name:               &name,
-// 			Description:        &description,
-// 			SystemCode:         &systemCode,
-// 			SystemAlias:        &systemAlias,
-// 			FacilityZone:       &facilityZone,
-// 			Location:           &location,
-// 			OwnerPerson:        &ownerPerson,
-// 			ResponsiblePerson:  &responsiblePerson,
-// 			MaintainedByPerson: &maintainedByPerson,
-// 		}
-
-// 		var parentName string
-// 		var parentId int64 = -1
-// 		var parentUid string
-// 		formParams, _ := c.FormParams()
-
-// 		if formParams.Has("parentName") {
-// 			parentName = c.FormValue("parentName")
-// 		}
-// 		if formParams.Has("parentUid") {
-// 			parentUid = c.FormValue("parentUid")
-// 		}
-// 		if formParams.Has("parentId") {
-// 			if vid, err := strconv.ParseInt(c.FormValue("parentId"), 10, 64); err == nil {
-// 				parentId = vid
-// 			}
-// 		}
-
-// 		newSystemID, err := h.systemsService.CreateNewSubsystem(system, parentId, parentUid, parentName)
-
-// 		if err != nil {
-// 			return c.JSON(http.StatusInternalServerError, "Unexpected server error: "+err.Error())
-// 		}
-
-// 		return c.JSON(http.StatusOK, echo.Map{"id": newSystemID})
-// 	}
-// }
-
-// func (h *SystemsHandlers) CreateNewHierarchicalRelationship() echo.HandlerFunc {
-// 	return func(c echo.Context) error {
-
-// 		var parentName string
-// 		var parentId int64 = -1
-// 		var parentUid string
-// 		var childName string
-// 		var childId int64 = -1
-// 		var childUid string
-
-// 		formParams, _ := c.FormParams()
-
-// 		if formParams.Has("parentName") {
-// 			parentName = c.FormValue("parentName")
-// 		}
-// 		if formParams.Has("parentUid") {
-// 			parentUid = c.FormValue("parentUid")
-// 		}
-// 		if formParams.Has("parentId") {
-// 			if vid, err := strconv.ParseInt(c.FormValue("parentId"), 10, 64); err == nil {
-// 				parentId = vid
-// 			}
-// 		}
-// 		if formParams.Has("childName") {
-// 			childName = c.FormValue("childName")
-// 		}
-// 		if formParams.Has("childUid") {
-// 			childUid = c.FormValue("childUid")
-// 		}
-// 		if formParams.Has("childId") {
-// 			if vid, err := strconv.ParseInt(c.FormValue("childId"), 10, 64); err == nil {
-// 				childId = vid
-// 			}
-// 		}
-
-// 		newSystemID, err := h.systemsService.CreateParentChildRelationship(parentId, parentUid, parentName, childId, childUid, childName)
-
-// 		if err != nil {
-// 			return c.JSON(http.StatusInternalServerError, "Unexpected server error: "+err.Error())
-// 		}
-
-// 		return c.JSON(http.StatusOK, echo.Map{"id": newSystemID})
-// 	}
-// }
-
-// // Delete System and all its relationships
-// func (h *SystemsHandlers) DeleteSystemAndRelationships() echo.HandlerFunc {
-// 	return func(c echo.Context) error {
-
-// 		formParams, _ := c.FormParams()
-
-// 		var systemId int64
-// 		if formParams.Has("systemId") {
-// 			if vid, err := strconv.ParseInt(c.FormValue("systemId"), 10, 64); err == nil {
-// 				systemId = vid
-// 			}
-// 		}
-
-// 		msg, err := h.systemsService.DeleteSystemAndRelationships(systemId)
-
-// 		if err != nil {
-// 			return c.JSON(http.StatusInternalServerError, "Unexpected server error: "+err.Error())
-// 		}
-
-// 		return c.JSON(http.StatusOK, echo.Map{"Result": msg})
-// 	}
-// }
-
-// // Delete relationship by parent and child ids
-// func (h *SystemsHandlers) DeleteRelationshipByParentChildIds() echo.HandlerFunc {
-// 	return func(c echo.Context) error {
-
-// 		formParams, _ := c.FormParams()
-
-// 		var parentId int64
-// 		if formParams.Has("parentId") {
-// 			if vid, err := strconv.ParseInt(c.FormValue("parentId"), 10, 64); err == nil {
-// 				parentId = vid
-// 			}
-// 		}
-// 		var childId int64
-// 		if formParams.Has("childId") {
-// 			if vid, err := strconv.ParseInt(c.FormValue("childId"), 10, 64); err == nil {
-// 				childId = vid
-// 			}
-// 		}
-
-// 		msg, err := h.systemsService.DeleteRelationshipByParentChildIds(parentId, childId)
-
-// 		if err != nil {
-// 			return c.JSON(http.StatusInternalServerError, "Unexpected server error: "+err.Error())
-// 		}
-
-// 		return c.JSON(http.StatusOK, echo.Map{"Result": msg})
-// 	}
-// }
+		result, err := h.systemsService.RecreateDatabaseData()
+		if err != nil {
+			log.Error(err.Error())
+			return c.JSON(500, "General server error")
+		}
+		return c.JSON(http.StatusOK, result)
+	}
+}
